data/rq1/k1/rust_code/final_projects/host__25c1898e1626/translate_by_qwen3_coder/preprocessed_header.h

typedef unsigned short uint16_t;
typedef unsigned int uint32_t;
char *strdup (const char *);
struct HdfSListNode {
    struct HdfSListNode *next;
};
struct HdfDeviceInfo {
    struct HdfSListNode node;
    _Bool isDynamic;
    uint16_t status;
    uint16_t deviceType;
    uint32_t deviceId;
    uint16_t policy;
    uint16_t priority;
    uint16_t preload;
    uint16_t permission;
    const char *moduleName;
    const char *svcName;
    const char *deviceMatchAttr;
    const char *deviceName;
};
struct HdfDeviceInfo *HdfDeviceInfoNewInstance(void);
struct HdfSBuf;
_Bool HdfSbufWriteUint32(struct HdfSBuf *sbuf, uint32_t value);
_Bool HdfSbufWriteUint16(struct HdfSBuf *sbuf, uint16_t value);
_Bool HdfSbufWriteString(struct HdfSBuf *sbuf, const char *value);
_Bool HdfSbufReadUint32(struct HdfSBuf *sbuf, uint32_t *value);
_Bool HdfSbufReadUint16(struct HdfSBuf *sbuf, uint16_t *value);
const char *HdfSbufReadString(struct HdfSBuf *sbuf);
struct HdfSBuf;
typedef enum {
    LOG_TYPE_MIN = 0,
    LOG_INIT = 1,
    LOG_CORE = 3,
    LOG_TYPE_MAX
} LogType;
typedef enum {
    LOG_DEBUG = 3,
    LOG_INFO = 4,
    LOG_WARN = 5,
    LOG_ERROR = 6,
    LOG_FATAL = 7,
} LogLevel;
int HiLogPrint(LogType type, LogLevel level, unsigned int domain, const char* tag, const char* fmt, ...)
    __attribute__((format(os_log, 5, 6)));
void OsalMemFree(void *mem);