data/paper_artifacts/deepseek_v4_pro_ohos10_0613_harness_fixed_v2/projects/shared__12e38ea922f7/.c2r_bindgen_extern/dev_attribute_serialize_fd13b20c.externs.rs

/* automatically generated by rust-bindgen 0.72.1 */

unsafe extern "C" {
    pub fn strdup(arg1: *const ::core::ffi::c_char) -> *mut ::core::ffi::c_char;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct HdfSListNode {
    pub next: *mut HdfSListNode,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct HdfDeviceInfo {
    pub node: HdfSListNode,
    pub isDynamic: bool,
    pub status: u16,
    pub deviceType: u16,
    pub deviceId: u32,
    pub policy: u16,
    pub priority: u16,
    pub preload: u16,
    pub permission: u16,
    pub moduleName: *const ::core::ffi::c_char,
    pub svcName: *const ::core::ffi::c_char,
    pub deviceMatchAttr: *const ::core::ffi::c_char,
    pub deviceName: *const ::core::ffi::c_char,
}
unsafe extern "C" {
    pub fn HdfDeviceInfoNewInstance() -> *mut HdfDeviceInfo;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct HdfSBuf {
    _unused: [u8; 0],
}
unsafe extern "C" {
    pub fn HdfSbufWriteUint32(sbuf: *mut HdfSBuf, value: u32) -> bool;
}
unsafe extern "C" {
    pub fn HdfSbufWriteUint16(sbuf: *mut HdfSBuf, value: u16) -> bool;
}
unsafe extern "C" {
    pub fn HdfSbufWriteString(sbuf: *mut HdfSBuf, value: *const ::core::ffi::c_char) -> bool;
}
unsafe extern "C" {
    pub fn HdfSbufReadUint32(sbuf: *mut HdfSBuf, value: *mut u32) -> bool;
}
unsafe extern "C" {
    pub fn HdfSbufReadUint16(sbuf: *mut HdfSBuf, value: *mut u16) -> bool;
}
unsafe extern "C" {
    pub fn HdfSbufReadString(sbuf: *mut HdfSBuf) -> *const ::core::ffi::c_char;
}
pub const LOG_TYPE_MIN: LogType = 0;
pub const LOG_APP: LogType = 0;
pub const LOG_INIT: LogType = 1;
pub const LOG_CORE: LogType = 3;
pub const LOG_KMSG: LogType = 4;
pub const LOG_ONLY_PRERELEASE: LogType = 5;
pub const LOG_TYPE_MAX: LogType = 6;
pub type LogType = ::core::ffi::c_uint;
pub const LOG_LEVEL_MIN: LogLevel = 0;
pub const LOG_DEBUG: LogLevel = 3;
pub const LOG_INFO: LogLevel = 4;
pub const LOG_WARN: LogLevel = 5;
pub const LOG_ERROR: LogLevel = 6;
pub const LOG_FATAL: LogLevel = 7;
pub const LOG_LEVEL_MAX: LogLevel = 8;
pub type LogLevel = ::core::ffi::c_uint;
unsafe extern "C" {
    pub fn HiLogPrint(
        type_: LogType,
        level: LogLevel,
        domain: ::core::ffi::c_uint,
        tag: *const ::core::ffi::c_char,
        fmt: *const ::core::ffi::c_char,
        ...
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn OsalMemFree(mem: *mut ::core::ffi::c_void);
}
